<?xml version="1.0"?>
<package>
  <name>herbpy</name>
  <version>0.0.1</version>
  <description>
    Python library for interacting with HERB through OpenRAVE. HERB is a
    bimanual mobile manipulator developed by the Personal Robotics Lab at
    Carnegie Mellon University.
  </description>
  <url type="repository">https://svn.personalrobotics.ri.cmu.edu/pr-ros-pkg/trunk/herbpy</url>
  <maintainer email="mkoval@cs.cmu.edu">Michael Koval</maintainer>
  <author email="mkoval@cs.cmu.edu">Michael Koval</author>
  <author email="pkv@cs.cmu.edu">Pras Velagapudi</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>python</build_depend>
  <run_depend>python</run_depend>
  <run_depend>prpy</run_depend>
  <run_depend>or_urdf</run_depend>
</package>
