<?xml version="1.0"?>
<package format="2">
  <name>herbpy</name>
  <version>1.8.1</version>
  <description>
    Python library for interacting with HERB through OpenRAVE. HERB is a
    bimanual mobile manipulator developed by the Personal Robotics Lab at
    Carnegie Mellon University.
  </description>
  <url type="website">https://github.com/personalrobotics/herbpy</url>
  <url type="repository">https://github.com/personalrobotics/herbpy.git</url>
  <url type="bugtracker">https://github.com/personalrobotics/herbpy/issues</url>
  <maintainer email="mkoval@cs.cmu.edu">Michael Koval</maintainer>
  <author email="mkoval@cs.cmu.edu">Michael Koval</author>
  <author email="pkv@cs.cmu.edu">Pras Velagapudi</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>python</depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>cbirrt2</exec_depend>
  <exec_depend>espeak</exec_depend>
  <exec_depend>prpy</exec_depend>
  <exec_depend>ipython</exec_depend>
  <exec_depend>python-argparse</exec_depend>
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>python-yaml</exec_depend>
  <exec_depend>or_urdf</exec_depend>
  <exec_depend>or_cdchomp</exec_depend>
  <exec_depend>or_ompl</exec_depend>
  <exec_depend>or_sbpl</exec_depend>
  <exec_depend>openrave</exec_depend>
  <test_depend>python-nose</test_depend>
  <test_depend>pr_ordata</test_depend>
</package>
